--- a/SparkValueDesktopApplication/App.xaml
+++ b/SparkValueDesktopApplication/App.xaml
@@ -11,5 +11,13 @@
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Padding" Value="2"/>
         </Style>
+        <Style x:Key="ControlInError" TargetType="{x:Type Control}">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="ToolTip"
+                            Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
