--- a/SparkValueDesktopApplication/Views/DashboardView.xaml
+++ b/SparkValueDesktopApplication/Views/DashboardView.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
+        <!--#region Top Bar -->
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
@@ -28,9 +29,11 @@
                 </Button>
             </StackPanel>
         </Grid>
+        <!--#endregion-->
 
         <DockPanel Grid.Row="1">
-            
+
+            <!--#region Left Side Bar -->
             <Border DockPanel.Dock="Left" Background="LightSlateGray" MaxWidth="200">
                 <DockPanel LastChildFill="False" MinWidth="150">
                     <StackPanel DockPanel.Dock="Top" >
@@ -42,9 +45,10 @@
                         </Hyperlink>
                     </TextBlock>
                 </DockPanel>
-                
             </Border>
+            <!--#endregion-->
 
+            <!--#region Unit Selection Menu -->
             <ScrollViewer DockPanel.Dock="Right" MinWidth="350">
                 <ItemsControl ItemsSource="{Binding Units}">
                     <ItemsControl.ItemsPanel>
@@ -60,14 +64,14 @@
                                     <ItemsControl ItemsSource="{Binding Lessons}">
                                         <ItemsControl.ItemsPanel>
                                             <ItemsPanelTemplate>
-                                                <StackPanel FlowDirection="LeftToRight" IsItemsHost="True">
-                                                </StackPanel>
+                                                <WrapPanel FlowDirection="LeftToRight" IsItemsHost="True" ItemWidth="260">
+                                                </WrapPanel>
                                             </ItemsPanelTemplate>
                                         </ItemsControl.ItemsPanel>
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBlock VerticalAlignment="Center" Text="{Binding Title}"/>
+                                                    <TextBlock VerticalAlignment="Center" Text="{Binding Title}" MaxWidth="120" TextWrapping="WrapWithOverflow"/>
                                                     <Button Content="Go to lesson" Command="{Binding LessonNavigateCommand}"/>
                                                 </StackPanel>
                                             </DataTemplate>
@@ -78,10 +82,8 @@
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
-                
             </ScrollViewer>
-            
+            <!--#endregion-->
         </DockPanel>
-        
     </Grid>
 </UserControl>
