--- a/SparkValueDesktopApplication/Views/DashboardView.xaml
+++ b/SparkValueDesktopApplication/Views/DashboardView.xaml
@@ -60,7 +60,10 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Width="550" Margin="1.5" Background="LightSlateGray" CornerRadius="5">
-                                <Expander HorizontalAlignment="Right" Header="{Binding Title}" FlowDirection="RightToLeft" Margin="5">
+                                <Expander HorizontalAlignment="Right" FlowDirection="RightToLeft" Margin="5">
+                                    <Expander.Header>
+                                        <TextBlock Text="{Binding Title}" FlowDirection="LeftToRight" ToolTip="{Binding Description}"/>
+                                    </Expander.Header>
                                     <ItemsControl ItemsSource="{Binding Lessons}">
                                         <ItemsControl.ItemsPanel>
                                             <ItemsPanelTemplate>
@@ -70,7 +73,7 @@
                                         </ItemsControl.ItemsPanel>
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
+                                                <StackPanel Orientation="Horizontal" ToolTip="{Binding Description}">
                                                     <TextBlock VerticalAlignment="Center" Text="{Binding Title}" MaxWidth="120" TextWrapping="WrapWithOverflow"/>
                                                     <Button Content="Go to lesson" Command="{Binding LessonNavigateCommand}"/>
                                                 </StackPanel>
