Password reset progress.

--- a/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SparkValueDesktopApplication.Views"
+             xmlns:AP="clr-namespace:SparkValueDesktopApplication.AttachedProperties"
+             xmlns:VR="clr-namespace:SparkValueDesktopApplication.ValidationRules"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Margin="10" MinWidth="550" BorderBrush="Black" BorderThickness="2" CornerRadius="25" Background="LightSlateGray">
@@ -18,9 +20,24 @@
             <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1">
                 <StackPanel VerticalAlignment="Center" Margin="10">
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
-                        <TextBlock Text="New Password:"/>
-                        <PasswordBox x:Name="PasswordEntry" MinWidth="150" MaxWidth="150"/>
+                        <TextBlock Text="Reset Verification:"/>
+                        <TextBox x:Name="VerificationEntry" Text="{Binding PasswordVerification}" MinWidth="150" MaxWidth="150" VerticalContentAlignment="Center"/>
                     </StackPanel>
+                    <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
+                        <TextBlock Text="New Password:"/>
+                        <PasswordBox x:Name="PasswordEntry" MinWidth="150" MaxWidth="150" VerticalContentAlignment="Center"
+                                     PasswordChanged="PasswordEntry_PasswordChanged"
+                                     Style="{StaticResource ControlInError}">
+                            <AP:PasswordBoxAttachedProperty.EncryptedPassword>
+                                <Binding Path="NewPassword" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                                    <Binding.ValidationRules>
+                                        <VR:PasswordRule/>
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </AP:PasswordBoxAttachedProperty.EncryptedPassword>
+                        </PasswordBox>
+                    </StackPanel>
+                    <TextBlock MaxWidth="300" Foreground="LightYellow" Text="{Binding ErrorText}" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold"/>
 
                     <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right">
                         <Grid.ColumnDefinitions>
